use :v1 tag in k8s deployment [skipci]

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -17,4 +17,4 @@ spec:
       serviceAccountName: dnshortcut
       containers:
       - name: dnshortcut
-        image: ghcr.io/magnm/dnshortcut
+        image: ghcr.io/magnm/dnshortcut:v1
